// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Showcases /> Should render correctly 1`] = `
<div>
  <div
    class="css-ycbew2-Container e1vuap0q6"
    id="exampleGetApi"
  >
    <button
      class="css-cms8ac-ButonGetApi e1vuap0q5"
    />
  </div>
</div>
`;

exports[`<Showcases /> When props.loading is true must render component <Spiner /> 1`] = `
<div>
  <div
    class="css-ycbew2-Container e1vuap0q6"
    id="exampleGetApi"
  >
    <button
      class="css-cms8ac-ButonGetApi e1vuap0q5"
    />
    <div
      class="css-d9vn3c-SpinnerRoot elalafq0"
    />
  </div>
</div>
`;
